[package]
name = "hello-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = [ "derive" ] }
cfg-if = "1.0.0"
env_logger = "0.10.0"
log = "0.4.20"
maplit = "1.0.2"
pollster = "0.3.0"
wgpu = "0.17.1"
winit = "0.28.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wgpu = {version = "0.17.1", features = ["webgl"]}	
web-sys = "0.3.64"
